spacing fix for WP User Avatar in comments

--- a/rtl.css
+++ b/rtl.css
@@ -495,6 +495,7 @@ a img {
   border: solid 2px #fff;
   border-radius: 50%;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+  margin: 0;
 }
 .comment-list li.comment.bypostauthor,
 .comment-list li.pingback.bypostauthor {
