--- a/sass/_comments.scss
+++ b/sass/_comments.scss
@@ -18,6 +18,7 @@
       border: solid 2px #fff;
       border-radius: 50%;
       box-shadow: 0 0 12px rgba(0,0,0,0.2);
+      margin: 0;
     }
     &.bypostauthor {
       background: $color-gray-blue;
